Head site infomation add  & robots.txt add / 중요 정보 크롤링차단

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/vitaIcon.png" />
@@ -7,37 +7,44 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="크리에이터라면 누구나 경매 콘텐츠의 경험 하실 수 있습니다. 창작의 노력, 이제는 수익으로 돌아옵니다! 당신의 작품이 경제적 가치를 인정받는 순간을 경험하세요."
     />
+    <meta
+      name="keywords"
+      content="비타비딩, 크리에이터, 실시간 경매, 온라인 경매, 창작품 경매, 창작물, 창작품, 라이브 옥션, 크리에이터 경매, 유튜버 경매, 경매 유튜버, 유튜버 옥션, 창작품 옥션, 서드파티, 경매플랫폼, 옥션플랫폼, 실시간 경매 플랫폼, vitabidding, diy, 미술품경매, 공예경매"
+    />
+    <meta name="author" content="비타비딩" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/vitaIcon.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>비타비딩</title>
+    <title>비타비딩 - VITABIDDING | 크리에이터를 위한 실시간 경매 플랫폼</title>
+    <meta
+      property="og:title"
+      content="비타비딩 - 크리에이터를 위한 실시간 경매 플랫폼"
+    />
+    <meta
+      property="og:description"
+      content="크리에이터라면 누구나 경매 콘텐츠의 경험 하실 수 있습니다. 창작의 노력, 이제는 수익으로 돌아옵니다! 당신의 작품이 경제적 가치를 인정받는 순간을 경험하세요."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/img_vitabidding.png" />
+    <meta property="og:image:alt" content="%PUBLIC_URL%/img_vitabidding.png" />
+    <meta property="og:url" content="https://vitabidding.shop/" />
+    <meta property="og:site_name" content="비타비딩" />
+    <meta
+      name="naver-site-verification"
+      content="794555b7ad2391f3ee2aef5e403ed6f830367157"
+    />
+    <meta property="al:ios:url" content="applinks://docs" />
+    <meta property="al:ios:app_store_id" content="12345" />
+    <meta property="al:ios:app_name" content="App Links" />
+    <meta property="al:android:url" content="applinks://docs" />
+    <meta property="al:android:app_name" content="App Links" />
+    <meta property="al:android:package" content="org.applinks" />
+    <meta property="al:web:url" content="http://applinks.org/documentation" />
+    <link rel="canonical" href="https://vitabidding.shop/" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
