naversearchadvisor title, opengraph edit

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="크리에이터라면 누구나 경매 콘텐츠의 경험 하실 수 있습니다. 창작의 노력, 이제는 수익으로 돌아옵니다! 당신의 작품이 경제적 가치를 인정받는 순간을 경험하세요."
+      content="크리에이터의 작품, 경매로 가치를 인정받고 수익으로! 창작 노력의 보상을 경험하세요."
     />
     <meta
       name="keywords"
@@ -16,14 +16,14 @@
     <meta name="author" content="비타비딩" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/vitaIcon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>비타비딩 - VITABIDDING | 크리에이터를 위한 실시간 경매 플랫폼</title>
+    <title>비타비딩 - 크리에이터를 위한 실시간 경매 플랫폼</title>
     <meta
       property="og:title"
       content="비타비딩 - 크리에이터를 위한 실시간 경매 플랫폼"
     />
     <meta
       property="og:description"
-      content="크리에이터라면 누구나 경매 콘텐츠의 경험 하실 수 있습니다. 창작의 노력, 이제는 수익으로 돌아옵니다! 당신의 작품이 경제적 가치를 인정받는 순간을 경험하세요."
+      content="크리에이터의 작품, 경매로 가치를 인정받고 수익으로! 창작 노력의 보상을 경험하세요."
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="%PUBLIC_URL%/img_vitabidding.png" />
