google site verification add

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,10 @@
       name="naver-site-verification"
       content="794555b7ad2391f3ee2aef5e403ed6f830367157"
     />
+    <meta
+      name="google-site-verification"
+      content="6a6FEFGojCK5wMhGGV1rVZS3uUbU2vX7cbfeKtX88gI"
+    />
     <meta property="al:ios:url" content="applinks://docs" />
     <meta property="al:ios:app_store_id" content="12345" />
     <meta property="al:ios:app_name" content="App Links" />
